# pico-j2534

./: .gitignore  README.md
.github/workflows/: build-pico-firmware.yml  build-windows-vci.yml
docs/: usb_protocol.md
pico/: CMakeLists.txt  README.md
pico/include/: board_config.h  pico_j2534_protocol.h  tusb_config.h
pico/src/: main.c  mcp2515.c  mcp2515.h  usb_descriptors.c
windows_vci/: CMakeLists.txt  README.md  register_pico_j2534.reg.in
windows_vci/include/: j2534.h  pico_j2534_protocol.h
windows_vci/src/: dllmain.cpp  isotp.cpp  isotp.h  j2534.cpp  pico_j2534.def  winusb_transport_win.cpp  winusb_transport_win.h
windows_vci/tools/: vin_smoke_test.cpp
